force-app/main/default/objects/bpats__Placement_Credit_Template_Entry__c/bpats__Placement_Credit_Template_Entry__c.object-meta.xml
<CustomObject>
    <label>Placement Credit Template Entry</label>
    <nameField>
        <label>Placement Credit Template Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Credit Template Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>