force-app/main/default/objects/bpats__Placement_Credit_Template_Entry__c/fields/bpats__ATS_Branch_Receiving_Credit__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Branch_Receiving_Credit__c</fullName>
    <label>Branch Receiving Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>