force-app/main/default/objects/bpats__Placement_Credit_Template_Entry__c/fields/bpats__ATS_Placement_Credit_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Placement_Credit_Name__c</fullName>
    <label>Placement Credit Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>bpats__Placement_Credit_Name</valueSetName>
    </valueSet>
</CustomField>