force-app/main/default/objects/bpats__Placement_Credit_Template_Entry__c/fields/bpats__Credit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>bpats__Credit_Percentage__c</fullName>
    <label>Credit %</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>