force-app/main/default/objects/bpats__Placement_Credit_Template_Entry__c/fields/bpats__Placement_Credit_Template__c.field-meta.xml
<CustomField>
    <fullName>bpats__Placement_Credit_Template__c</fullName>
    <label>Placement Credit Template</label>
    <referenceTo>bpats__Placement_Credit_Template__c</referenceTo>
    <relationshipLabel>Placement Credit Template Entries</relationshipLabel>
    <relationshipName>Placement_Credit_Template_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>