force-app/main/default/objects/bpats__Placement_Credit_Template_Entry__c/fields/bpats__Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>bpats__Placement_Credit_Types</valueSetName>
    </valueSet>
</CustomField>