force-app/main/default/objects/bpats__Placement_Credit_Template_Entry__c/fields/bpats__User_Receiving_Credit__c.field-meta.xml
<CustomField>
    <fullName>bpats__User_Receiving_Credit__c</fullName>
    <label>User Receiving Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>