force-app/main/default/objects/bpats__Placement_Credit_Template_Entry__c/validationRules/bpats__Branch_Receiving_Credit_Criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>bpats__Branch_Receiving_Credit_Criteria</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(bpats__Type__c,&apos;Branch&apos;), 
 OR(
  ISBLANK(bpats__ATS_Branch_Receiving_Credit__c),
  NOT(ISBLANK(bpats__User_Receiving_Credit__c))
 )
)</errorConditionFormula>
    <errorMessage>Only Branch Receiving Credit should be populated for Branch type template entry.</errorMessage>
</ValidationRule>